# ROS2-Docker-Development

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.nvidia  LICENSE  README.md  build.sh  docker-compose.nvidia.yml  docker-compose.yml  run-linux.sh  run-wsl2.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
install/: local_setup.sh  setup.sh
install/buoy_detection/share/buoy_detection/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/velodyne_lidar/share/velodyne_lidar/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/buoy_detection/: package.xml  setup.cfg  setup.py
src/buoy_detection/buoy_detection/: box_publish.py  plot_publish.py  processed.py
src/buoy_detection/buoy_detection/ai/: processed.py
src/detect_result/: CMakeLists.txt  package.xml
src/detect_result/msg/: AIRes.msg
src/velodyne_lidar/: package.xml  setup.cfg  setup.py
src/velodyne_lidar/velodyne_lidar/: subscriber.py
