<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buoy_detection</name>
  <version>0.0.0</version>
  <description>This returns the results from the MHSeals YOLO buoy detection model</description>
  <maintainer email="45642687+Zutki@users.noreply.github.com">Zutki</maintainer>
  <license>MIT</license>

  <build_depend>python-pytorch-pip</build_depend>

  <exec_depend>python-pytorch-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
